[package]
name = "cargo-config-profiles"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Switch cargo configurations with ease"
repository = "https://github.com/Hyphrio/cargo-config-profiles"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
owo-colors = "4.0.0"
simple-home-dir = "0.3.2"
which = "6.0.1"
